--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="4tf-8">
+<meta charset="utf-8">
 <title> final website</title>
 <link href="cssstlye.css" rel="stylesheet" type="text/css">
 <link href="responsive.css" rel="stylesheet" type="text/css">
